--- a/web/Gemfile
+++ b/web/Gemfile
@@ -30,6 +30,7 @@ gem 'whenever'
 gem 'redis-namespace'
 gem "rolify"
 gem 'bigdecimal', '1.3.5'
+gem 'activerecord-import'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
